--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ div {
  font-size: x-large;
  font-family: Georgia, 'Times New Roman', Times, serif;
  padding: 20px;
+ word-wrap: break-word;
  
 
 }
